--- a/templates/index.html
+++ b/templates/index.html
@@ -98,22 +98,22 @@
       </div>
     </div>
 
-    <div class="block">   
+    <div class="block-small">   
       {{page.fontPromo('tp-upgrade', imageRight=False, typeTester=True, characterViewer=False)}}
     </div>
-    <div class="block">   
+    <div class="block-small">   
       {{page.fontPromo('tp-powerlift', typeTester=True, style='Tight')}}
     </div>
-    <div class="block">         
+    <div class="block-small">   
       {{page.fontPromo('presti-vf', imageRight=False, typeTester=True)}}
     </div>
-    <div class="block">         
+    <div class="block-small">   
       {{page.fontPromo('tp-proforma', typeTester=True, style='Medium')}}
     </div>
-    <div class="block">   
+    <div class="block-small">   
       {{page.fontPromo('responder-p-vf', imageRight=False, typeTester=True)}}
     </div>
-    <div class="block">         
+    <div class="block-small">   
       {{page.fontPromo('responder-p-vf', typeTester=True)}}
     </div>
 
