--- a/templates/family.html
+++ b/templates/family.html
@@ -91,44 +91,76 @@
     });
   </script>
 
-<script>
-  document.addEventListener("DOMContentLoaded", () => {
-      const counters = document.querySelectorAll('.counter');
-      const speed = 3000; // 60 seconden
+  <!-- IMAGE OVERLAY BOX -->
 
-      const startCounting = (counter) => {
-          let count = 0;
-          const target = +counter.getAttribute('data-target');
-          const increment = target / (speed / 10); // Kleine stapjes
-
-          counter.style.opacity = 1; // Start de fade-in
-
-          const updateCount = () => {
-              if (count < target) {
-                  count += increment;
-                  counter.innerText = Math.ceil(count);
-                  setTimeout(updateCount, 10);
-              } else {
-                  counter.innerText = target;
-              }
-          };
-          updateCount();
-      };
-
-      const observer = new IntersectionObserver((entries, observer) => {
-          entries.forEach(entry => {
-              if (entry.isIntersecting) {
-                  startCounting(entry.target);
-                  observer.unobserve(entry.target);
-              }
-          });
-      }, { threshold: 1 });
-
-      counters.forEach(counter => {
-          observer.observe(counter);
+  <script>
+      let images = document.querySelectorAll('.gallery-img');
+      let overlay = document.getElementById('imageOverlay');
+      let overlayImg = document.getElementById('overlayImg');
+      let currentIndex = 0;
+      
+      function openOverlay(index) {
+          currentIndex = index;
+          overlayImg.src = images[currentIndex].src;
+          overlay.style.display = 'flex';
+      }
+      
+      function closeOverlay() {
+          overlay.style.display = 'none';
+      }
+      
+      function changeImage(direction) {
+          currentIndex += direction;
+          if (currentIndex < 0) currentIndex = images.length - 1;
+          if (currentIndex >= images.length) currentIndex = 0;
+          overlayImg.src = images[currentIndex].src;
+      }
+      
+      images.forEach((img, index) => {
+          img.addEventListener('click', () => openOverlay(index));
       });
-  });
-</script>
+  </script>
+
+  <!-- TIME TICKER -->
+
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+        const counters = document.querySelectorAll('.counter');
+        const speed = 3000; // 60 seconden
+
+        const startCounting = (counter) => {
+            let count = 0;
+            const target = +counter.getAttribute('data-target');
+            const increment = target / (speed / 10); // Kleine stapjes
+
+            counter.style.opacity = 1; // Start de fade-in
+
+            const updateCount = () => {
+                if (count < target) {
+                    count += increment;
+                    counter.innerText = Math.ceil(count);
+                    setTimeout(updateCount, 10);
+                } else {
+                    counter.innerText = target;
+                }
+            };
+            updateCount();
+        };
+
+        const observer = new IntersectionObserver((entries, observer) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    startCounting(entry.target);
+                    observer.unobserve(entry.target);
+                }
+            });
+        }, { threshold: 1 });
+
+        counters.forEach(counter => {
+            observer.observe(counter);
+        });
+    });
+  </script>
 
 </head>
   <body>
@@ -320,6 +352,7 @@
     <div class="block">  
       <div class="four-colum-flex">  
         <div class="grid">
+          <!-- CONTENT-->  
           <div class="four-items-flex">
             <div class="image-block">
               <img src="./images/2022/Presti_in_use_pure_care_02.jpg">
@@ -446,63 +479,6 @@
         </div>     
       </div>
     </div>    
-
-    <!-- TWO COLUMNS TOPICS -->
-    <div class="block" id="topics">  
-      <div class="one-colum"> 
-        <div class="one-item"> 
-          <div class="headerBox">
-            <h3>Topics</h3>
-          </div>
-        </div>
-      </div>
-      <div class="container4">
-        <div class="column4">
-          <div class="topic">        
-            <div class="text-block">
-              <h4>Wide range of weights</h4>
-              <p>Because Upgrade is destined for complex, heavy-duty typography, an extremely broad range of weights is available, from Hairline to Ultra Black.</p>
-              <div class="image-block">
-                <img src="https://upgrade.typenetwork.com/images/pic01.gif" >
-              </div>   
-            </div>
-          </div>
-        </div>
-        <div class="column4">
-          <div class="topic">        
-            <div class="text-block">
-              <h4>Extended glyph set</h4>
-              <p>Upgrade includes an extended glyph set supported by a number of stylistic feature options, such as small caps, inferior and superior figures, an inline capital J, and an alternate g.</p>
-              <div class="image-block">
-                <img src="https://upgrade.typenetwork.com/images/pic02.png">
-              </div>   
-            </div>
-          </div>
-        </div>
-        <div class="column4">
-          <div class="topic">        
-            <div class="text-block">
-              <h4>Five master drawings per character</h4>
-              <p>Different weights of a typeface are often made by interpolating two or three master drawings per character. Upgrade is made from five original drawings.</p>
-              <div class="image-block">
-                <img src="https://upgrade.typenetwork.com/images/pic03.png">
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="column4">
-          <div class="topic">        
-            <div class="text-block">
-              <h4>Figures and fractions</h4>
-              <p>Upgrade offers a variety of figures and supporting currency symbols for use with capitals, small caps, lowercase characters, and fractions.</p>
-              <div class="image-block">
-                <img src="https://upgrade.typenetwork.com/images/pic04.png">
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
 
     <!-- TWO COLUMNS TOPICS -->
     <div class="block" id="topics">  
@@ -732,7 +708,7 @@
  <div class="container3">
     <div class="column3">
       <div class="tile">      
-        <h5>Ligatures [liga]</h5>
+        <h5>Ligatures</h5>
         <h6 class="def">file, fjord, flow, loft</h6>
         <h6 class="liga">file, fjord, flow, loft</h6>
         <div class="css-code">font-feature-settings: "liga";</div>
@@ -740,7 +716,7 @@
     </div>
     <div class="column3">
       <div class="tile">      
-        <h5>Fractions [frac]</h5>
+        <h5>Fractions</h5>
         <h6 class="def">1/2 1/3 1/4 1/5 234/567</h6>
         <h6 class="frag">1/2 1/3 1/4 1/5 234/567</h6>
         <div class="css-code">font-feature-settings: "frac";</div>
@@ -748,7 +724,7 @@
     </div>
     <div class="column3">
       <div class="tile">            
-        <h5>Tabular figures [tnum]</h5>
+        <h5>Tabular figures</h5>
         <h6 class="def">0123456789</h6>
         <h6 class="tnum">0123456789</h6>
         <div class="css-code">font-feature-settings: "tnum";</div>
@@ -756,7 +732,7 @@
     </div>
     <div class="column3">
        <div class="tile">      
-        <h5>Oldstyle figures [onum]</h5>
+        <h5>Oldstyle figures</h5>
         <h6 class="def">0123456789</h6>
         <h6 class="onum">0123456789</h6>
          <div class="css-code">font-feature-settings: "onum";</div>
@@ -764,7 +740,7 @@
     </div>
     <div class="column3">
       <div class="tile">      
-        <h5>Superior figures [sups]</h5>
+        <h5>Superior figures</h5>
         <h6 class="def">0123456789</h6>
         <h6 class="sups">0123456789</h6>
         <div class="css-code">font-feature-settings: "sups";</div>
@@ -772,7 +748,7 @@
     </div>
     <div class="column3">
       <div class="tile">      
-        <h5>Inferior figures [sinf]</h5>
+        <h5>Inferior figures</h5>
         <h6 class="def">0123456789</h6>
         <h6 class="sinf">0123456789</h6>
         <div class="css-code">font-feature-settings: "sinf";</div>
@@ -780,7 +756,7 @@
     </div>
     <div class="column3">
       <div class="tile">      
-        <h5>Lowercase to small caps [smcp]</h5>
+        <h5>Lowercase to small caps</h5>
         <h6 class="def">Design is detail management</h6>
         <h6 class="smcp">Design is detail management</h6>
         <div class="css-code">font-feature-settings: "c2sc";</div>
@@ -788,7 +764,7 @@
     </div>
     <div class="column3">
       <div class="tile">      
-        <h5>Caps to small caps [c2sc] + [smcp]</h5>
+        <h5>Caps to small caps</h5>
         <h6 class="def">Design is detail management</h6>
         <h6 class="c2sc smcp">Design is detail management</h6>
         <div class="css-code">font-feature-settings: "c2sc smcp";</div>
@@ -796,22 +772,23 @@
     </div>
     <div class="column3">
       <div class="tile">      
-        <h5>Slashed zero [zero]</h5>
+        <h5>Slashed zero</h5>
         <h6 class="def">€ 12.000.000</h6>
         <h6 class="zero">€ 12.000.000</h6>
-      </div>
-    </div>
-    <div class="column3">
-      <div class="tile">      
-        <h5>Caps to small caps [c2sc] + [smcp]</h5>
-        <h6 class="def">Design is detail management</h6>
-        <h6 class="c2sc smcp">Design is detail management</h6>
         <div class="css-code">font-feature-settings: "zero";</div>
       </div>
     </div>
     <div class="column3">
       <div class="tile">      
-        <h5>Slashed zero [zero]</h5>
+        <h5>Caps to small caps</h5>
+        <h6 class="def">Design is detail management</h6>
+        <h6 class="c2sc smcp">Design is detail management</h6>
+        <div class="css-code">font-feature-settings: "c2sc smcp";</div>
+      </div>
+    </div>
+    <div class="column3">
+      <div class="tile">      
+        <h5>Slashed zero</h5>
         <h6 class="def">€ 12.000.000</h6>
         <h6 class="zero">€ 12.000.000</h6>
         <div class="css-code">font-feature-settings: "c2sc";</div>
