--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,11 @@
 
 /* GENERAL ATTRIBUTES */
 
+
+@view-transition {
+  navigation: auto;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -28,6 +33,8 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 
 html {
   scroll-behavior: smooth;
+  scroll-padding-top: 50px;
+  scroll-snap-type: y proximity;
 }
 
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
@@ -259,7 +266,7 @@ blockquote {
 
 /* SELECTION */
 
-::-moz-selection { /* Code for Firefox */
+::-moz-selection {
   color: #202124;
   background-color: yellow;
 }
@@ -276,10 +283,10 @@ blockquote {
   -webkit-transform: translateX(20em);
   -ms-transform: translateX(20em);
   transform: translateX(20em);
-  -moz-transition: -moz-transform 0.5s ease, box-shadow 0.5s ease;
-  -webkit-transition: -webkit-transform 0.5s ease, box-shadow 0.5s ease;
-  -ms-transition: -ms-transform 0.5s ease, box-shadow 0.5s ease;
-  transition: transform 0.5s ease, box-shadow 0.5s ease;
+  -moz-transition: transform 0.5s ease, box-shadow 0.5s ease, opacity 0.5s ease;
+  -webkit-transition: transform 0.5s ease, box-shadow 0.5s ease, opacity 0.5s ease;
+  -ms-transition: transform 0.5s ease, box-shadow 0.5s ease, opacity 0.5s ease;
+  transition: transform 0.5s ease, box-shadow 0.5s ease, opacity 0.5s ease;
   -webkit-overflow-scrolling: touch;
   background: #f64242;
   box-shadow: none;
@@ -287,14 +294,23 @@ blockquote {
   height: 100%;
   max-width: 40%;
   overflow-y: auto;
-  padding: 3em 2em;
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
   position: fixed;
   right: 0;
   top: 0;
   visibility: hidden;
+  opacity: 0;
   width: 20em;
   z-index: 10002;
   border-left: solid 1px #202124;
+}
+
+@media screen and (max-width: 1000px) {
+  #menu{
+    max-width: 100%;
+  }
 }
 
 #menu.visible {
@@ -304,8 +320,15 @@ blockquote {
   transform: translateX(0);
   box-shadow: 0 0 1.5em 0 rgba(0, 0, 0, 0.2);
   visibility: visible;
+  opacity: 1;
 }
 
+#menuButton{
+  position: fixed;
+  right: 0px;
+  z-index: 20002;
+  padding-right: 20px;
+}
 
 #menu > ul {
   margin: 0 0 1em 0;
@@ -323,11 +346,11 @@ blockquote {
 }
 
 #menu > ul.links > li:hover {
-  color:#202124;
+  color:yellow;
 }
 
 #menu > ul.links > li > a:not(.button) {
-  border-top: solid 2px yellow;
+  border-top: solid 1px yellow;
   color: inherit;
   display: block;
   line-height: 3.5em;
@@ -344,27 +367,20 @@ blockquote {
   font-family:"Upgrade";
 }
 
-
-@media screen and (max-width: 736px) {
-  #menu .close {
-    height: 4em;
-  }
-}
-
 /* LOGO */
 
 .logo {
-    height: 60px; /* Stelt de hoogte van de logo in */
-    background-color: black; /* Zwarte achtergrondkleur */
-    display: flex; /* Zorgt ervoor dat de afbeelding goed wordt uitgelijnd */
-    justify-content: flex-start; /* Plaatst de afbeelding aan de linkerkant */
-    align-items: center; /* Centreert de afbeelding verticaal */
-    padding-left: 0; /* Optioneel, voegt wat ruimte toe aan de linkerkant */
+    height: 60px;
+    background-color: black; 
+    display: flex; 
+    justify-content: flex-start;
+    align-items: center;
+    padding-left: 0; 
     border:none;
 }
 .logo img {
-    height: 100%; /* Zorgt ervoor dat de afbeelding de volledige hoogte van de .logo div vult */
-    width: auto; /* Handhaaft de proporties van de afbeelding */
+    height: 100%;
+    width: auto;
     margin-left: 10px;
 }
 
@@ -511,13 +527,6 @@ div.text {
     margin:20px;
 }
 
-#menuButton{
-  position: absolute;
-  right: 0px;
-  z-index: 3000000;
-  padding-right: 20px;
-}
-
 .material-symbols-outlined {
   font-variation-settings:
   'FILL' 0,
@@ -542,10 +551,10 @@ div.text {
   z-index: 1000;
   text-align: left;
   border-bottom: solid 1px white;
-  animation: fadeIn 2s ease-in-out;
   box-shadow: 0 -20px 20px rgba(0, 0, 0, 0.3), /* Bovenschaduw */
               0 20px 20px rgba(0, 0, 0, 0.3);  /* Onderschaduw */
 }
+
 
 nav{
   margin: 0 auto;
@@ -577,6 +586,7 @@ nav{
     display: none;
   }
 }
+
 
 .slide {
   min-width: 100%;
@@ -645,6 +655,12 @@ nav{
   border-top: solid 1px white;
 }
 
+@media screen and (max-width: 906px) {
+  .footer-links{
+    display:none;
+  }
+}
+
 .footer-content {
   display: flex;
   justify-content: space-between;
@@ -660,36 +676,6 @@ nav{
 
 .footer-links{
   margin-right: 20px;
-}
-
-/* MENU */
-
-.menu{
-  color:white;
-}
-
-.menu ul, .footer-links ul {
-  display: flex;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.footer-links ul li {
-  margin-left: 30px;
-}
-
-.menu ul li a, .footer-links ul li a {
-  color: white;
-  text-decoration: none;
-  font-size: 1.1rem;
-  font-family:"Upgrade";
-  font-weight:Regular;
-}
-
-.menu ul li a:hover, .footer-links ul li a:hover {
-  text-decoration: underline; /* Voeg onderlijning toe bij hover */
-  color: red;
 }
 
 .read-more-btn {
@@ -788,6 +774,12 @@ nav{
     padding-top: 20px;
     padding-bottom: 20px;
     padding-left: 20px;
+}
+
+.one-colum:has(.headerBox){
+  position: sticky;
+  background-color: white;
+  top:40px;
 }
 
 .three-columns {
@@ -1030,7 +1022,28 @@ nav{
   .six-items-flex:nth-child(6):has(.image-block) {display:block;}
 }
 
+/* SCROLL ANCHOR */
+
+.block, .block-small{
+  scroll-snap-align: start;
+}
+
+@media screen and (max-width: 1000px) {
+  .block, .block-small
+  .image-block, .text-block, .rot, .tile,
+  .one-item-flex, .two-items-flex, .three-items-flex, .four-items-flex, .five-items-flex, .six-items-flex,
+  .container-flex, .container2, .container3, .container4,
+  .column2, .column3, .column3m, .column4 {
+    scroll-snap-align: start;    
+  }
+}
+
 /* BLOCKS */
+
+@keyframes fadeIn {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
 
 .block, .block-small{
   width: 100vw;
@@ -1039,7 +1052,10 @@ nav{
               0 20px 20px rgba(0, 0, 0, 0.3);  /* Onderschaduw */
   border-top: solid 0.5px white; 
   border-bottom: solid 0.5px white; 
+  animation: fadeIn 1s ease-out forwards;
 }
+
+/* BLOCK TYPES */
 
 .block {
   margin-top: 100px;
@@ -1389,7 +1405,7 @@ nav{
     position: relative;
     width: 100%;
     height: 700px;
-    animation: fadeIn 2s ease-in-out;
+    animation: fadeIn 1s ease-in-out;
 }
 
 .hero-image-last{
@@ -1400,7 +1416,6 @@ nav{
     position: relative;
     width: 100%;
     height: 400px;
-    animation: fadeIn 2s ease-in-out;
     box-shadow: inset 0px 60px 100px rgba(0,0,0, 1);
     border-bottom: solid 1px black;
 }
@@ -1478,7 +1493,6 @@ nav{
 }
 
 /* HERO OVERLAY */
-
 
 .hero-image {
     background-size: cover;
@@ -1639,17 +1653,6 @@ nav{
     font-family:"Upgrade Bold";
     color:white;
     font-size: 4em;
-}
-
-/* ANIMATE FADE IN */
-
-@keyframes fadeIn {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
 }
 
 /* IMAGE OVERLAY */
