--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,11 +4,6 @@
 
 /* GENERAL ATTRIBUTES */
 
-
-@view-transition {
-  navigation: auto;
-}
-
 body {
   margin: 0;
   padding: 0;
@@ -33,8 +28,6 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 
 html {
   scroll-behavior: smooth;
-  scroll-padding-top: 50px;
-  scroll-snap-type: y proximity;
 }
 
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
@@ -266,7 +259,7 @@ blockquote {
 
 /* SELECTION */
 
-::-moz-selection {
+::-moz-selection { /* Code for Firefox */
   color: #202124;
   background-color: yellow;
 }
@@ -283,10 +276,10 @@ blockquote {
   -webkit-transform: translateX(20em);
   -ms-transform: translateX(20em);
   transform: translateX(20em);
-  -moz-transition: transform 0.5s ease, box-shadow 0.5s ease, opacity 0.5s ease;
-  -webkit-transition: transform 0.5s ease, box-shadow 0.5s ease, opacity 0.5s ease;
-  -ms-transition: transform 0.5s ease, box-shadow 0.5s ease, opacity 0.5s ease;
-  transition: transform 0.5s ease, box-shadow 0.5s ease, opacity 0.5s ease;
+  -moz-transition: -moz-transform 0.5s ease, box-shadow 0.5s ease;
+  -webkit-transition: -webkit-transform 0.5s ease, box-shadow 0.5s ease;
+  -ms-transition: -ms-transform 0.5s ease, box-shadow 0.5s ease;
+  transition: transform 0.5s ease, box-shadow 0.5s ease;
   -webkit-overflow-scrolling: touch;
   background: #f64242;
   box-shadow: none;
@@ -294,23 +287,14 @@ blockquote {
   height: 100%;
   max-width: 40%;
   overflow-y: auto;
-  padding-top: 20px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 3em 2em;
   position: fixed;
   right: 0;
   top: 0;
   visibility: hidden;
-  opacity: 0;
   width: 20em;
   z-index: 10002;
   border-left: solid 1px #202124;
-}
-
-@media screen and (max-width: 1000px) {
-  #menu{
-    max-width: 100%;
-  }
 }
 
 #menu.visible {
@@ -320,15 +304,8 @@ blockquote {
   transform: translateX(0);
   box-shadow: 0 0 1.5em 0 rgba(0, 0, 0, 0.2);
   visibility: visible;
-  opacity: 1;
 }
 
-#menuButton{
-  position: fixed;
-  right: 0px;
-  z-index: 20002;
-  padding-right: 20px;
-}
 
 #menu > ul {
   margin: 0 0 1em 0;
@@ -346,11 +323,11 @@ blockquote {
 }
 
 #menu > ul.links > li:hover {
-  color:yellow;
+  color:#202124;
 }
 
 #menu > ul.links > li > a:not(.button) {
-  border-top: solid 1px yellow;
+  border-top: solid 2px yellow;
   color: inherit;
   display: block;
   line-height: 3.5em;
@@ -367,20 +344,27 @@ blockquote {
   font-family:"Upgrade";
 }
 
+
+@media screen and (max-width: 736px) {
+  #menu .close {
+    height: 4em;
+  }
+}
+
 /* LOGO */
 
 .logo {
-    height: 60px;
-    background-color: black; 
-    display: flex; 
-    justify-content: flex-start;
-    align-items: center;
-    padding-left: 0; 
+    height: 60px; /* Stelt de hoogte van de logo in */
+    background-color: black; /* Zwarte achtergrondkleur */
+    display: flex; /* Zorgt ervoor dat de afbeelding goed wordt uitgelijnd */
+    justify-content: flex-start; /* Plaatst de afbeelding aan de linkerkant */
+    align-items: center; /* Centreert de afbeelding verticaal */
+    padding-left: 0; /* Optioneel, voegt wat ruimte toe aan de linkerkant */
     border:none;
 }
 .logo img {
-    height: 100%;
-    width: auto;
+    height: 100%; /* Zorgt ervoor dat de afbeelding de volledige hoogte van de .logo div vult */
+    width: auto; /* Handhaaft de proporties van de afbeelding */
     margin-left: 10px;
 }
 
@@ -527,6 +511,13 @@ div.text {
     margin:20px;
 }
 
+#menuButton{
+  position: absolute;
+  right: 0px;
+  z-index: 3000000;
+  padding-right: 20px;
+}
+
 .material-symbols-outlined {
   font-variation-settings:
   'FILL' 0,
@@ -551,10 +542,10 @@ div.text {
   z-index: 1000;
   text-align: left;
   border-bottom: solid 1px white;
+  animation: fadeIn 2s ease-in-out;
   box-shadow: 0 -20px 20px rgba(0, 0, 0, 0.3), /* Bovenschaduw */
               0 20px 20px rgba(0, 0, 0, 0.3);  /* Onderschaduw */
 }
-
 
 nav{
   margin: 0 auto;
@@ -586,7 +577,6 @@ nav{
     display: none;
   }
 }
-
 
 .slide {
   min-width: 100%;
@@ -655,12 +645,6 @@ nav{
   border-top: solid 1px white;
 }
 
-@media screen and (max-width: 906px) {
-  .footer-links{
-    display:none;
-  }
-}
-
 .footer-content {
   display: flex;
   justify-content: space-between;
@@ -676,6 +660,36 @@ nav{
 
 .footer-links{
   margin-right: 20px;
+}
+
+/* MENU */
+
+.menu{
+  color:white;
+}
+
+.menu ul, .footer-links ul {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footer-links ul li {
+  margin-left: 30px;
+}
+
+.menu ul li a, .footer-links ul li a {
+  color: white;
+  text-decoration: none;
+  font-size: 1.1rem;
+  font-family:"Upgrade";
+  font-weight:Regular;
+}
+
+.menu ul li a:hover, .footer-links ul li a:hover {
+  text-decoration: underline; /* Voeg onderlijning toe bij hover */
+  color: red;
 }
 
 .read-more-btn {
@@ -774,12 +788,6 @@ nav{
     padding-top: 20px;
     padding-bottom: 20px;
     padding-left: 20px;
-}
-
-.one-colum:has(.headerBox){
-  position: sticky;
-  background-color: white;
-  top:40px;
 }
 
 .three-columns {
@@ -1024,7 +1032,6 @@ nav{
 
 /* SCROLL ANCHOR */
 
-<<<<<<< Updated upstream
 .block, .block-small{
   scroll-snap-align: start;
 }
@@ -1037,22 +1044,16 @@ nav{
   .column2, .column3, .column3m, .column4 {
     scroll-snap-align: start;    
   }
-=======
+
 .block, .block-small,
 .image-block, .text-block, .rot, .tile,
 .one-item-flex, .two-items-flex, .three-items-flex, .four-items-flex, .five-items-flex, .six-items-flex,
 .container-flex, .container2, .container3, .container4,
 .column2, .column3, .column3m, .column4 {
   scroll-snap-align: start; 
->>>>>>> Stashed changes
 }
 
 /* BLOCKS */
-
-@keyframes fadeIn {
-  from { opacity: 0; }
-  to { opacity: 1; }
-}
 
 .block, .block-small{
   width: 100vw;
@@ -1061,10 +1062,7 @@ nav{
               0 20px 20px rgba(0, 0, 0, 0.3);  /* Onderschaduw */
   border-top: solid 0.5px white; 
   border-bottom: solid 0.5px white; 
-  animation: fadeIn 1s ease-out forwards;
 }
-
-/* BLOCK TYPES */
 
 .block {
   margin-top: 100px;
@@ -1414,7 +1412,7 @@ nav{
     position: relative;
     width: 100%;
     height: 700px;
-    animation: fadeIn 1s ease-in-out;
+    animation: fadeIn 2s ease-in-out;
 }
 
 .hero-image-last{
@@ -1425,6 +1423,7 @@ nav{
     position: relative;
     width: 100%;
     height: 400px;
+    animation: fadeIn 2s ease-in-out;
     box-shadow: inset 0px 60px 100px rgba(0,0,0, 1);
     border-bottom: solid 1px black;
 }
@@ -1502,6 +1501,7 @@ nav{
 }
 
 /* HERO OVERLAY */
+
 
 .hero-image {
     background-size: cover;
@@ -1662,6 +1662,17 @@ nav{
     font-family:"Upgrade Bold";
     color:white;
     font-size: 4em;
+}
+
+/* ANIMATE FADE IN */
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
 /* IMAGE OVERLAY */
