--- a/templates/family.html
+++ b/templates/family.html
@@ -184,7 +184,7 @@
           </ul>
         </nav>
         <a id="menuButton" href="#menu"><span class="material-symbols-outlined">menu</span></a>
-<<<<<<< HEAD
+
         <input type="checkbox" id="menuToggle">
         <label for="menuToggle"><span class="material-symbols-outlined">menu</span></label>
         <nav class="side">
@@ -197,8 +197,6 @@
             <li><a href="#usage">Usage</a></li>
           </ul>
         </nav>
-=======
->>>>>>> parent of 74c65e5 (Add css update)
       </div>
     </header>
 
@@ -218,7 +216,7 @@
     </nav>
 
     <!-- HERO IMAGE -->
-    <div class="block firstblock">  
+    <div class="block firstblock" id="start">  
       <section class="hero-image">
           <img src="./images/2022/Presti_in_use_pure_care_02.jpg" class="hero-image-img">
           <div class="hero-overlay">
@@ -1055,7 +1053,7 @@
   </div>
   
   <!-- SCROLL TO TOP BUTTON -->
-  <div id="scrollTopBtn">UP</div>
+  <div id="scrollTopBtn"><a href="#start">Styles & axes</a></div>
 
     {{page.getFooter()}}
 
