--- a/templates/family.html
+++ b/templates/family.html
@@ -1053,7 +1053,7 @@
   </div>
   
   <!-- SCROLL TO TOP BUTTON -->
-  <div id="scrollTopBtn"><a href="#start">Styles & axes</a></div>
+  <div id="scrollTopBtn"><a href="#start"><div class="material-symbols-outlined">menu</div></a></div>
 
     {{page.getFooter()}}
 
