--- a/templates/index.html
+++ b/templates/index.html
@@ -108,7 +108,7 @@
       {{page.fontPromo('presti-vf', imageRight=False, typeTester=True)}}
     </div>
     <div class="block-small">   
-      {{page.fontPromo('tp-proforma', typeTester=True, style='Medium')}}
+      {{page.fontPromo('tp-proforma', typeTester=True)}}
     </div>
     <div class="block-small">   
       {{page.fontPromo('responder-p-vf', imageRight=False, typeTester=True)}}
