--- a/templates/family.html
+++ b/templates/family.html
@@ -323,7 +323,7 @@
           <div class="text-block">
             <h4>Acknowledgements</h4>
             <p>As always, designing a large family like this—writing a novel—never happens without the support and input from a great team. I’d like to thank (in order of appearance) Claudia Mens, Tilmann Hielscher, Jill Pichotta, CJ Dunn, David Jonathan Ross, Marina Chaccur, Tamye Riggs, Yves Peters, Claire Lindsey, Kirsten Langmuur, Caren Litherland, Chris Lewis, Paley Dreier, and the rest of the Type Network production and marketing teams.</p>
-            <p>I’d also like to thank the suppliers of tools: Frederik Berlaen, Tal Leming, Erik van Blokland, Just van Rossum, Alexandre Saumier Demers, and Michiel Kauw-A-Tjoe.</p>
+            <p>I’d also like to thank the suppliers of tools: Frederik Berlaen, Tal Leming, Erik van Blokland, Just van Rossum, Jasper van Blokland, Alexandre Saumier Demers, and Michiel Kauw-A-Tjoe.</p>
             <p>Last but not least, thanks to my partners in Type Network (and more): David Berlow, Sam Berlow, and Roger Black.</p>
             <p>Thanks to all for the creation of context, valuable input, support, and resources. —Petr van Blokland</p>
           </div>
